syntax = "proto3";

package employee;

option go_package = "northwind/proto/employee";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "typespb.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "northwind";
        version: "1.0";
        description: "Boilerplate code generated by xo-grpc. Modify proto/*.proto files then run 'compile.sh' script on proto directory to change the services interface.";
        contact: {
            name: "xo-grpc - Walter Wanderley";
            url: "https://github.com/walterwanderley/xo-grpc";
        };
    };
};
service Employee {
    
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/employee/{EmployeeID}"
            
        };
    }
    
    rpc Employee(EmployeeRequest) returns (typespb.Employee) {
        option (google.api.http) = {
            get: "/v1/employee/{ReportsTo}"
            
        };
    }
    
    rpc EmployeeByEmployeeID(EmployeeByEmployeeIDRequest) returns (typespb.Employee) {
        option (google.api.http) = {
            get: "/v1/employee/{employeeID}"
            
        };
    }
    
    rpc Insert(InsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/employee"
            body: "*"
            
        };
    }
    
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/employee/{EmployeeID}"
            body: "*"
            
        };
    }
    
    rpc Upsert(UpsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/employee/upsert"
            body: "*"
            
        };
    }
    
}

message DeleteRequest { 
    int32 EmployeeID = 1;
}

message EmployeeRequest { 
    .google.protobuf.Int64Value ReportsTo = 1;
}

message EmployeeByEmployeeIDRequest { 
    int32 employeeID = 1;
}

message InsertRequest { 
    .google.protobuf.StringValue Address = 1;
    .google.protobuf.Timestamp BirthDate = 2;
    .google.protobuf.StringValue City = 3;
    .google.protobuf.StringValue Country = 4;
    int32 EmployeeID = 5;
    .google.protobuf.StringValue Extension = 6;
    string FirstName = 7;
    .google.protobuf.Timestamp HireDate = 8;
    .google.protobuf.StringValue HomePhone = 9;
    string LastName = 10;
    .google.protobuf.StringValue Notes = 11;
    bytes Photo = 12;
    .google.protobuf.StringValue PhotoPath = 13;
    .google.protobuf.StringValue PostalCode = 14;
    .google.protobuf.StringValue Region = 15;
    .google.protobuf.Int64Value ReportsTo = 16;
    .google.protobuf.StringValue Title = 17;
    .google.protobuf.StringValue TitleOfCourtesy = 18;
}

message UpdateRequest { 
    .google.protobuf.StringValue Address = 1;
    .google.protobuf.Timestamp BirthDate = 2;
    .google.protobuf.StringValue City = 3;
    .google.protobuf.StringValue Country = 4;
    // Output only.
    int32 EmployeeID = 5;
    .google.protobuf.StringValue Extension = 6;
    string FirstName = 7;
    .google.protobuf.Timestamp HireDate = 8;
    .google.protobuf.StringValue HomePhone = 9;
    string LastName = 10;
    .google.protobuf.StringValue Notes = 11;
    bytes Photo = 12;
    .google.protobuf.StringValue PhotoPath = 13;
    .google.protobuf.StringValue PostalCode = 14;
    .google.protobuf.StringValue Region = 15;
    .google.protobuf.Int64Value ReportsTo = 16;
    .google.protobuf.StringValue Title = 17;
    .google.protobuf.StringValue TitleOfCourtesy = 18;
}

message UpsertRequest { 
    .google.protobuf.StringValue Address = 1;
    .google.protobuf.Timestamp BirthDate = 2;
    .google.protobuf.StringValue City = 3;
    .google.protobuf.StringValue Country = 4;
    int32 EmployeeID = 5;
    .google.protobuf.StringValue Extension = 6;
    string FirstName = 7;
    .google.protobuf.Timestamp HireDate = 8;
    .google.protobuf.StringValue HomePhone = 9;
    string LastName = 10;
    .google.protobuf.StringValue Notes = 11;
    bytes Photo = 12;
    .google.protobuf.StringValue PhotoPath = 13;
    .google.protobuf.StringValue PostalCode = 14;
    .google.protobuf.StringValue Region = 15;
    .google.protobuf.Int64Value ReportsTo = 16;
    .google.protobuf.StringValue Title = 17;
    .google.protobuf.StringValue TitleOfCourtesy = 18;
}
